# vgi-audio

./: CLAUDE.md  Makefile  README.md  audio_worker.py  conftest.py  pyproject.toml
.github/workflows/: ci.yml
ci/: README.md  run-integration.sh
test/sql/: features.test  hostile.test  metadata.test
tests/: synth.py  test_features.py  test_scalars.py  test_tables.py
vgi_audio/: __init__.py  _example_audio.py  features.py  meta.py  scalars.py  schema_utils.py  tables.py
